# taskman

./: .gitignore  CMakeLists.txt  README.md
doc/: taskman.tex
example/: CMakeLists.txt
example/src/: taskman_example.cpp  text_ui.hpp
include/taskman/: heap.hpp  policy_blocking.hpp  policy_fifo.hpp  policy_iface.hpp  policy_prio.hpp  process.hpp  taskman.hpp  taskman_common.hpp  taskman_fifo.hpp  taskman_iface.hpp  taskman_prio.hpp
src/: policy_blocking.cpp  policy_fifo.cpp  policy_prio.cpp  taskman_common.cpp
test/: CMakeLists.txt
test/src/: policy.test.cpp  taskman.test.cpp  test_sample_generator.hpp
